# slint-futuresdr-demo

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  plotter.slint
.cargo/: config.toml
src/: lib.rs  replay_vec.rs  vector.rs  websocket_rx.rs
src/futuresdr_integrated/: additive_noise.rs  channel_sink.rs  mod.rs
src/rendering/: mod.rs  wasm_backend.rs
